tests/invalid/variables/bad_lvalue.rs
/*
fail: 1
*/

main(): int {
    a: int = 2;
    a + 3 = 4;
    return a;
}